- Modificación del evento ADDED_TO_MAP para que se lance desde fachada en capas WMS. 
- Se implementa min/max scale para todos los tipos de capas y se añade los métodos get/set en la clase Layer.
- Se eliminan métodos get/set type de las capas OSM, MapLibre y GeoTIFF.
- Se añade mensaje de aviso al usar transparent como parámetro en capas.
- Añadido template como parámetro junto a sus métodos get/set en capas vectoriales.
- Se activa el extract por defecto en las capas vectoriales.
- Mejoras en la comprobación de la implementación en capas Vector.
- Se activa el extract por defecto en los grupos de capas.
- Mejoras relacionadas con los grupos de capas del plugin LayerSwitcher.
- Se soluciona error con la edición de geometrías en plugin VectorsManagement.
- Se implementa el uso del ticket en capas WMS, incluyendo el control getFeatureInfo y el plugin information.
- Se implementa el uso del ticket en el plugin comparators.
- Se implementa el parámetro tileLoadFunction en el vendors, ademas de setTileLoadFunction.
- Se añade el parámetro "mergeLayers" en las capas WMS.
- Se añade /doc a api/actions.
- Se permite añadir al mapa el mismo servicio con igual nombre más de una vez (idLayer).
- Se añaden métodos getId y setId para sobreescribir el identificador de la capa.
- Reincorpora /resources/svg en /api/actions
- Se incorpora /resources/geodata a /api/actions
- Se añade evento ADDED_TO_MAP para capas WMS_FULL.
- Se mueve el parámetro styles de WMS al primer objeto.
- Se implementa el parámetro styles de WMS en API REST.
- Se implementa el parámetro sldVersion en WMS tanto por constructor como por API REST.
- Se añaden métodos setURL y setName para capas WMTS.
- Se implementa métodos setURL y recreateLayer en capas KML.
- Eliminado el metodo getMaxExtent de la implementación de Layer.
- Se modifica el evento ADDED_TO_MAP de las capas KML.
- Se tienen en cuenta los filros aplicados en las capas Vector en el metodo getFeaturesExtent.